<resources>
    <string name="app_name">RC Racing</string>
    <string name="imageView">imageView</string>
    <string name="imageView1">imageView1</string>
    <string name="imageView2">imageView2</string>
    <string name="imageView3">imageView3</string>
    <string name="tvRaceType"> </string>
    <string name="paramsRaceType">Select race type</string>
    <string name="paramsLaps">How many laps ?</string>
    <string name="paramsGates">How many gates ?</string>
    <string name="paramsKills">How many kills ?</string>
    <string name="paramsLives">How many lives ?</string>
    <string name="r1">Race Only, No Weapons</string>
    <string name="r2">Race with Weapons</string>
    <string name="r3">Krush Kill \'N\' Destroy</string>
    <string name="sb0">1</string>
    <string name="sb1">2</string>
    <string name="sb10">10</string>
    <string name="sb20">20</string>
    <string name="sb30">30</string>
    <string name="start">Start</string>
    <string name="spinner_title">Select Race Type</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="count">START 10sec\nCOUNTDOWN</string>
</resources>
