<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/imageView2"
        android:src="@drawable/logo"/>

    <TextView
        android:id="@+id/tvRaceType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView2"
        android:paddingBottom="3dp"
        android:layout_centerHorizontal="true"
        android:lines="2"
        android:text="@string/tvRaceType"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvRaceType"
        android:layout_centerHorizontal="true"/>

    <ImageView
        android:id="@+id/connectionState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="4dp"
        android:layout_marginTop="2dp"
        android:contentDescription="@string/imageView"
        android:src="@drawable/disconnected"/>

    <ImageView
        android:id="@+id/menuIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/imageView"
        android:src="@android:drawable/ic_menu_manage"/>

</RelativeLayout>